fix horizontal scroll

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,6 +6,6 @@
   -moz-osx-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   color: #ffffff;
+  overflow-x: hidden;
 }
-
 
